ricreate proporzioni blocchi da riempire

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   </head>
   <body>
 
+    <!-- Sfondo del sito -->
+    <div class="sfondo">
+
+    </div>
+    <!-- /Sfondo del sito -->
+
     <!-- Container di tutto il sito -->
     <div class="container">
 
@@ -42,9 +48,18 @@
             <div class="block2-dx">
               B2
             </div>
+            <div class="block3-dx">
+              B3
+            </div>
           </div>
       </div>
       <!-- /Contenuto del sito -->
+
+      <!-- Reference img -->
+      <div class="reference">
+
+      </div>
+      <!-- /Reference img -->
 
       <!-- Footer -->
       <footer>
