--- a/index.html
+++ b/index.html
@@ -20,8 +20,27 @@
       <!-- Header -->
       <header>
         <div class="block-header">
-          Sono l'header
+          <!-- Testata con sfondo -->
+          <div class="header-testata">
+
+          </div>
+
+          <!-- Navbar sito -->
+          <div class="header-navbar">
+            <!-- <ul>
+              <li>HOME</li>
+              <li>ABOUT</li>
+              <li>PAGE TEMPLATES</li>
+              <li>A PARENT PAGE</li>
+              <li>FEATURES</li>
+              <li>BLOG</li>
+              <li>CONTACT</li>
+            </ul> -->
+          </div>
+
+
         </div>
+
       </header>
       <!-- /Header -->
 
@@ -64,7 +83,6 @@
       <!-- Footer -->
       <footer>
         <div class="block-footer">
-          Sono il footer
         </div>
       </footer>
       <!-- /Footer -->
