inseriti contenuti nella parte html

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
           <!-- Navbar sito -->
           <div class="header-navbar">
             <ul>
-              <li>HOME</li>
-              <li>ABOUT</li>
-              <li>PAGE TEMPLATES</li>
-              <li>A PARENT PAGE</li>
-              <li>FEATURES</li>
-              <li>BLOG</li>
-              <li>CONTACT</li>
+              <li><a class="link-navbar"href="#">HOME</a></li>
+              <li><a class="link-navbar"href="#">ABOUT</a></li>
+              <li><a class="link-navbar"href="#">PAGE TEMPLATES</a></li>
+              <li><a class="link-navbar"href="#">A PARENT PAGE</a></li>
+              <li><a class="link-navbar"href="#">FEATURES</a></li>
+              <li><a class="link-navbar"href="#">BLOG</a></li>
+              <li><a class="link-navbar"href="#">CONTACT</a></li>
             </ul>
           </div>
 
@@ -49,40 +49,64 @@
           <!-- Barra a sinistra -->
           <div class="sidebar-left float-l">
             <div class="block1-sx">
-              Sono il blocco di sinistra
+              <div class="rss-logo float-l">
+
+              </div>
+              <h1> Organic themes </h1>
+              <a href="#">How to pick a WordPress thme for 2019</a>
+              <a href="#">How to pick a WordPress thme for 2019</a>
+              <a href="#">How to pick a WordPress thme for 2019</a>
+              <a href="#">How to pick a WordPress thme for 2019</a>
+              <a href="#">How to pick a WordPress thme for 2019</a>
 
             </div>
           </div>
 
           <!-- Barra centrale -->
           <div class="content-center float-l">
-            Corpo
+            <h1> THREE COLUMN </h1>
+            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
 
           <!-- Barra a destra -->
           <div class="sidebar-right float-l">
             <div class="block1-dx">
-              B1
+              <h1>Text Widget</h1>
+              <p>This is an example of a text widget. You could write a brief introduction to your site, add links, images, videot html, and more using a text widget. It's a pretty handy!</p>
             </div>
             <div class="block2-dx">
-              B2
+              <h1>Text Widget</h1>
+              <p>This is an example of a text widget. You could write a brief introduction to your site, add links, images, videot html, and more using a text widget. It's a pretty handy!</p>
             </div>
             <div class="block3-dx">
-              B3
+              <h1>Text Widget</h1>
+              <p>This is an example of a text widget. You could write a brief introduction to your site, add links, images, videot html, and more using a text widget. It's a pretty handy!</p>
             </div>
           </div>
       </div>
       <!-- /Contenuto del sito -->
 
       <!-- Reference img -->
-      <div class="reference">
+      <!-- <div class="reference">
 
-      </div>
+      </div> -->
       <!-- /Reference img -->
 
       <!-- Footer -->
       <footer>
         <div class="block-footer">
+          <div class="footer-firma">
+            Pagina realizzata da Simone Bresci
+          </div>
+          <div class="footer-link-social">
+            <div class="link-facebook float-l">
+            </div>
+            <div class="link-insta float-l">
+            </div>
+            <div class="link-gatto float-l">
+            </div>
+
+          </div>
         </div>
       </footer>
       <!-- /Footer -->
