modifiche al footer in corso

--- a/index.html
+++ b/index.html
@@ -51,13 +51,14 @@
             <div class="block1-sx">
               <div class="rss-logo float-l">
 
+
               </div>
-              <h1> Organic themes </h1>
-              <a href="#">How to pick a WordPress thme for 2019</a>
-              <a href="#">How to pick a WordPress thme for 2019</a>
-              <a href="#">How to pick a WordPress thme for 2019</a>
-              <a href="#">How to pick a WordPress thme for 2019</a>
-              <a href="#">How to pick a WordPress thme for 2019</a>
+              <h1> Organic Themes </h1>
+              <a href="#">How to Pick a WordPress Theme for 2019</a>
+              <a href="#">The updated Gutenberg Portfolio Theme</a>
+              <a href="#">Black Friday Through Cyber Monday Deal For WordPress Website Owners</a>
+              <a href="#">The ultimate Guide To Optimizing Your WordPress Theme For Gutenberg</a>
+              <a href="#">A Better WordPress Page Builder - Organic Builder Widget Pro</a>
 
             </div>
           </div>
@@ -87,9 +88,9 @@
       <!-- /Contenuto del sito -->
 
       <!-- Reference img -->
-      <!-- <div class="reference">
+      <div class="reference">
 
-      </div> -->
+      </div>
       <!-- /Reference img -->
 
       <!-- Footer -->
@@ -99,11 +100,11 @@
             Pagina realizzata da Simone Bresci
           </div>
           <div class="footer-link-social">
-            <div class="link-facebook float-l">
+            <div class="link-facebook">
             </div>
-            <div class="link-insta float-l">
+            <div class="link-insta">
             </div>
-            <div class="link-gatto float-l">
+            <div class="link-gatto">
             </div>
 
           </div>
