--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
   <body>
 
     <!-- Sfondo del sito -->
-    <div class="sfondo">
-
-    </div>
-    <!-- /Sfondo del sito -->
+    <div class="sfondo"></div>
 
     <!-- Container di tutto il sito -->
     <div class="container">
@@ -22,7 +19,10 @@
         <div class="block-header">
           <!-- Testata con sfondo -->
           <div class="header-testata">
-
+            <div class="header-over">
+              <img src="./img/header-logo.png" alt="Logo sito">
+              <span> ANOTHER BEATIFUL ORGANIC THEME</span>
+            </div>
           </div>
 
           <!-- Navbar sito -->
@@ -37,10 +37,7 @@
               <li><a class="link-navbar"href="#">CONTACT</a></li>
             </ul>
           </div>
-
-
         </div>
-
       </header>
       <!-- /Header -->
 
@@ -50,8 +47,6 @@
           <div class="sidebar-left float-l">
             <div class="block1-sx">
               <div class="rss-logo float-l">
-
-
               </div>
               <h1> Organic Themes </h1>
               <a href="#">How to Pick a WordPress Theme for 2019</a>
@@ -88,26 +83,31 @@
       <!-- /Contenuto del sito -->
 
       <!-- Reference img -->
-      <div class="reference">
-
-      </div>
+      <!-- <div class="reference">
+      </div> -->
       <!-- /Reference img -->
 
       <!-- Footer -->
       <footer>
         <div class="block-footer">
+          <!-- Firma sito -->
           <div class="footer-firma">
             Pagina realizzata da Simone Bresci
           </div>
-          <div class="footer-link-social">
-            <div class="link-facebook">
-            </div>
-            <div class="link-insta">
-            </div>
-            <div class="link-gatto">
-            </div>
 
+          <!-- Footer - immagini cliccabili social -->
+          <div class="footer-link-social">
+            <div class= "footer-box float-l">
+            <a href="#"><img src="./img/icone/facebook.jpg" alt="icona facebook"></a>
+            </div>
+            <div class= "footer-box float-l">
+              <a href="#"><img src="./img/icone/instagram.jpg" alt="icona instagram"></a>
+            </div>
+            <div class= "footer-box float-l">
+              <a href="#"><img src="./img/icone/github.jpg" alt="icona github"></a>
+            </div>
           </div>
+          <!-- /Footer - immagini cliccabili social -->
         </div>
       </footer>
       <!-- /Footer -->
